# attune-verify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: mutation.yml  publish-pypi.yml  tests.yml
scripts/: mutation_gate.py
specs/qa-corpus-mutation/: plan.md
src/attune_verify/: __init__.py  _extract.py  _verify.py  context.py  result.py
src/attune_verify/checkers/: __init__.py  counts.py  flags.py  imports.py  links.py
src/attune_verify/semantic/: __init__.py  protocol.py  rag_adapter.py
tests/: test_behavioral.py  test_imports.py  test_regression_author_351.py  test_result.py  test_security.py  test_semantic.py
tests/corpus/: __init__.py  cases.py  test_corpus.py
