[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attune-verify"
version = "0.2.0"
description = "Generation fact-checker for the attune-* family. Verifies named entities in LLM output actually exist — imports import, CLI flags are real, links resolve, counts match source."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = [
    "verification", "fact-checking", "hallucination",
    "llm", "attune", "grounding", "faithfulness",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
rag = ["attune-rag>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "build>=1.0",
    "twine>=5.0",
    "mutmut>=3.0",
]

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-verify"
Repository = "https://github.com/Smart-AI-Memory/attune-verify"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["BLE001"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.coverage.run]
source = ["attune_verify"]
omit = ["tests/*"]

[tool.mutmut]
source_paths = ["src/attune_verify/"]
# The semantic layer is optional glue around attune-rag (an optional dep);
# exclude it from mutation so the score reflects the deterministic core.
do_not_mutate = ["*/semantic/*"]
